# stm32_magnetic

./: Cargo.toml  README.md
src/: main.rs
src/devices/: mod.rs
