[package]
name = "i2c_magnetic"
version = "0.1.0"
authors = ["clement"]

[dependencies]
cortex-m = "0.3.0"
cortex-m-rtfm = "0.2.0"
f3 = { git = "https://github.com/japaric/f3" }

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.0"

[dependencies.cortex-m-semihosting]
version = "0.2.0"

[profile.release]
debug = true
lto = true
